mobile navbar fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">Join US</a></li>
         </ul>
-        <i class="navbar-nav navbar-toggler collapse.navbar-collapse"></i>
+        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
@@ -77,7 +77,7 @@
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
       <div class="carousel-inner" role="listbox">
-
+ 
         <!-- Slide 1 -->
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
           <div class="carousel-container">
