--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">F.A.Q.</a></li>
               <li><a href="#">Portfolios</a></li>
