--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <ul>
               <li class="active"><a href="about.html">About Us</a></li>
               <li><a href="#">Blog</a></li>
-              <li><a href="#">F.A.Q.</a></li>
+              <li><a href="fag.html">F.A.Q.</a></li>
               <li><a href="#">Portfolios</a></li>
               <li><a href="#">Team</a></li>
               <li><a href="#">Testimonials</a></li>
