--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
-              <li><a href="#">Portfolios</a></li>
-              <li><a href="#">Team</a></li>
+              <li><a href="portfolio.html">Portfolios</a></li>
               <li><a href="#">Testimonials</a></li>
               </li>
             </ul>
