--- a/portfolio.html
+++ b/portfolio.html
@@ -43,14 +43,14 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span  class="active">About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
-              <li><a href="portfolio.html">Portfolios</a></li>
+              <li><a href="portfolio.html"  class="active">Portfolios</a></li>
               <li><a href="#">Testimonials</a></li>
               </li>
             </ul>
