--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Blog</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
+          <li><a href="events.html">Events</a></li>
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">Join US</a></li>
         </ul>
