--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
           </li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
           <li><a href="#">Join US</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
