--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="#">Join US</a></li>
+          <li><a href="join.html">Join US</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
       </nav><!-- .navbar -->
@@ -63,6 +63,7 @@
       <div class="header-social-links d-flex">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-github"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
@@ -78,7 +79,7 @@
         <!-- Slide 1 -->
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
           <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
+            <div class="text-center carousel-content animate__animated animate__fadeInUp">
               <h2>Our Mission</h2>
               <p>HachStacks is committed to HATCHING great minds and potentials into tech
                 careers by ADDING value and directing their tech career path through
@@ -86,7 +87,7 @@
                 premium courses, job offers, etc. HachStacks will HELP all interested
                 individuals grow.
                 </p>
-              <div class="text-center"><a href="./assets/pdf/Hbroch.pdf" class="btn-get-started" target="_blank">Read More</a></div>
+              <div><a href="brochure.html" class="btn-get-started" target="_blank">Read More</a></div>
             </div>
           </div>
         </div>
