--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="join.html">Join US</a></li>
         </ul>
-        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
+        <i class="navbar-nav  mobile-nav-toggle bi-x navbar-toggler collapse.navbar-collapse"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
