lol... i cant remember what i did

--- a/about.html
+++ b/about.html
@@ -47,10 +47,9 @@
           <li class="dropdown"><a href="#"><span class="active">About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Blog</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
-              <li><a href="testimonials.html" class="active">Testimonials</a></li>
+              <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
@@ -119,7 +118,7 @@
               <li><i class="ri-check-double-line"></i> GROW into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              Join this amazing community today! Send a DM to any of our social media handles and <a href="#" class="btn-get-started" >fill this form here</a>
+              Join this amazing community today! Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
             </p>
           </div>
         </div>
@@ -133,7 +132,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Core <strong>Team</strong></h2>
-          <p>HachStacks was formed by a team of tech enthusiasts in Akwa Ibom State 
+          <p style="text-align: justify;">HachStacks was formed by a team of tech enthusiasts in Akwa Ibom State 
             University in 2021. The body houses all students and individuals interested in 
             learning and teaching others digital skills relevant in the evolutionary 
             technology world. 
@@ -165,7 +164,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bx bxl-twitter"></i></a>
@@ -232,7 +231,7 @@
               </div>
               <div class="member-info">
                 <h4>Ekemini Udoh</h4>
-                <span>Crypto Analyst</span>
+                <span>Blockchain Analyst</span>
               </div>
             </div>
           </div>
