--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
 
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
@@ -126,13 +126,13 @@
               <br>
               HachStacks aims at identifying these tech minds, 
             </p>
-            <ul>
+            <ul> 
               <li><i class="ri-check-double-line"></i> CONNECT, guide, teach and allow them</li>
               <li><i class="ri-check-double-line"></i> EXPLORE the tech ecosystem with access to premium resources that will help them</li>
               <li><i class="ri-check-double-line"></i> GROW into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              Join this amazing community today! Send a DM to any of our social media handles and <a href="#" class="btn-get-started" >fill this form here</a>
+              Join this amazing community today! Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
             </p>
           </div>
         </div>
@@ -267,13 +267,15 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-3 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
-              Akwa Ibom State University,<br>
-              Both Campuses<br><br>
-              <strong>Whatsapp:</strong> +234 815 6841 952<br>
-              <strong>Email:</strong> hello@hachstacks.com<br>
+              Akwa Ibom State University<br><br>
+
+              <ul>
+                <li><i class="bx bxl-envelope"></i> <a href="mailto:hello@hachstacks.com"> hello@hachstacks.com</a></li>
+                <li><i class="bx bxl-whatsapp"></i> <a href="https://wa.me/+2348156841952"> +234 815 684 1952</a></li>
+              </ul>
             </p>
           </div>
 
@@ -294,8 +296,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Check our portfolio for more...</a></li>
             </ul>
           </div>
 
